<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_popularity"
      android:icon="@drawable/ic_action_popularity"
      android:title="@string/nav_by_popularity"/>
    <item
      android:id="@+id/nav_rating"
      android:icon="@drawable/ic_action_rating"
      android:title="@string/nav_by_rating"/>
  </group>

</menu>